<resources>
    <string name="app_name">EcoTrajet</string>
    <string name="identifientConnexion">nom d\'utilisateur</string>
    <string name="hintUtilisateurNameConnection">entrer votre identifiant</string>
    <string name="pswConnection">Mot de Passe :</string>
    <string name="hintPswConnection">entrer votre mot de passe </string>
    <string name="btnConnctionText">Connexion </string>
    <string name="btnInscriptionText">Inscription </string>
    <string name="identifiantInscriptionText"> Nom d\'utilisateur :</string>
    <string name="hintIdentifiantInscriptionText"> ex: chadguy</string>
    <string name="prenomInscriptionText">prénom :</string>
    <string name="hintPrenomInscriptionText">ex: Guillaume</string>
    <string name="nomIscriptionText">nom de famille :</string>
    <string name="hintNomIscriptionText">ex: Simard</string>
    <string name="emailInscriptionText">adresse courriel :</string>
    <string name="hintEmailInscriptionText">ex: guillaume@gmail.com</string>
    <string name="telephoneInscriptionText">numéro de téléphone :</string>
    <string name="hintTelephoneInscriptionText">(418) 843-5257</string>
    <string name="pswInscriptionText">mot de passe :</string>
    <string name="hintPswInscriptionText">entrer votre mot de passe</string>
    <string name="pswConfirmeInscriptionText"> confirmation de mot de passe : </string>
    <string name="hintPswConfirmeInscriptionText"> entrer à nouveau votre mot de passe</string>
    <string name="nomTypePasager"> Conducteur ou passager :</string>
    <string name="comm_error">Erreur de communication</string>
    <string name="btnPassagerText"> Passager</string>
    <string name="btnConducteurText"> Conducteur</string>
    <string name="textViewChoix"> Guillaume vous ètes ?</string>
    <string name="TextPassActivity">Liste des parcours empruntés </string>
    <string name="TextDepartConducteur">Liste de mes départs </string>
    <string name="TextDemandeConducteur">Liste de mes demande </string>
    <string name="textFragmentDepart">Départ</string>
    <string name="textFragmentDemande">Demande</string>
    <string name="textAccptDemande">Accepter la demande</string>
    <string name="TextDateDepart">Date du trajet : </string>
    <string name="TextNbPersonne">nombre de passager disponible : </string>
    <string name="TextHeureDepart">Heure de départ prévue : </string>
    <string name="textNomParcours">NomParcours : </string>
    <string name="textCout">Cout par personne : </string>
    <string name="hintNomParcours"> parcours Québec -Montréal  </string>
    <string name="hintCoutPersonne"> 15  </string>
    <string name="textSpinnerRegion">région Administrative ?  </string>
    <string name="lblNomDemandes">lblNomDemandes </string>
    <string name="lblNomUtilP">lblNomUtilP</string>
    <string name="lblPageRecherche">Rechercher un trajet</string>
    <string name="lblRecherchePointA">Point de départ :</string>
    <string name="lblRecherchePointB">Point d\'arrivé :</string>
    <string name="lblRechercheDateA">Entre :</string>
    <string name="lblRechercheDateB">Et :</string>
    <string name="btnChoisirDate">Sélectionnez une date</string>
    <string name="lblBtnRechercher">Rechercher</string>
    <string name="title_rechercheActivity">Rechercher un trajet</string>
    <string name="lblResultatRechercheTitre">Resultat de la recherche</string>
    <string name="title_resultatRechercheActivity">Resultat de la Recherche.</string>
    <string name="lblTitreDescParcours">Parcours 1</string>
    <string name="lblCoordonneesDepart">Coordonnées de départ :</string>
    <string name="CoordDepartDescParcours">46°48\'44, 71°12\'52</string>
    <string name="lblCoordonneesArrive">Coordonnées d\'arrivée :</string>
    <string name="CoordArriveDescParcours">45°30, 73°30</string>
    <string name="lblConducteurVoitureDescParcours">Conducteur de la voiture :</string>
    <string name="ConducteurVoitureDescParcours">Guillaume Simard</string>
    <string name="lblContributionDescParcours">Contribution demandé par passager :</string>
    <string name="ContributionDescParcours">20$</string>
    <string name="btnDemanderDescParcours">Demander au conducteur</string>
    <string name="title_DescriptionParcoursActivity">Description d\'un parcour</string>
    <string name="text_modif_nbPassager">4</string>
    <string name="text_modif_heure">15 h 00</string>
    <string name="idNomDesc">idNomDesc</string>
    <string name="idDateDes">idDateDes</string>
    <string name="idNbPesonneDes">idNbPesonneDes</string>
    <string name="idHeureDes">idHeureDes</string>
    <string name="idCoutPersonneDes">idCoutPersonneDes </string>
    <string name="idNomConducteurDes">idNomConducteurDes</string>
    <string name="idRegionDes">idRegionDes</string>
    <string name="textNomConducteur">nom du conducteur :</string>
    <string name="idLenearLayout">idLenearLayout </string>
    <string name="idBtnConnection">btnConnexion </string>
    <string name="idBtnInscription">btnInsription </string>
    <string name="idMessageErreur">idEreurLogin </string>
    <string name="idIdentifiantInsc">idIdentifiantIns </string>
    <string name="idPrenomInsc">idPrenomIns </string>
    <string name="idNomInsc">idNomIns </string>
    <string name="idEmailInsc">idEmailIns </string>
    <string name="idTelephoneInsc">idTelephoneIns </string>
    <string name="idPswInsc">idPswIns </string>
    <string name="idConfirmPswInsc">idConfirmPswIns </string>
    <string name="title_activity_inscription_">inscription_Activity</string>
    <string name="spinner_typeUtilisateur_id">spinner_typeUtilisateur_id</string>
    <string name="idBtnPassager">btnConnexion </string>
    <string name="idBtnConducteur">btnInsription </string>
    <string name="idTextPassActivity">idTextMain </string>
    <string name="idNbPersonne">idNbPersonne </string>
    <string name="idHeureDepart">idHeureDepart </string>
    <string name="idAjoutTrajet">idAjoutTrajet </string>
    <string name="idNomParcours">idAjoutTrajet </string>
    <string name="titrePopopCofirm">confirmation de l\'ajout </string>
    <string name="textePopoAjout">Voulez-vous vraiment ajouter ce trajet à votre liste ?  </string>
    <string name="spinner_egion_id">idRegionS</string>
    <string name="idCoutPersonne">idCoutPersonne</string>
    <string name="titrePopopDeleteDepart">confirmation de la suppression </string>
    <string name="textePopoSupprimer">Voulez-vous vraiment supprimer ce départs  </string>
    <string name="titrePopopModifDepart">confirmation de la modification </string>
    <string name="textePopopModifDepart">Voulez-vous vraiment modifier ce depart ? </string>
    <string name="idTextEnteteModif">idTextEnteteModif</string>
    <string name="idNomParcoursModif">idNomParcoursModif</string>
    <string name="idNbPlaceModif">idNbPlaceModif</string>
    <string name="idHeureModif">idHeureModif</string>
    <string name="idCoutPersonneModif">idCoutPersonneModif</string>
    <string name="idSpinnerRegionModif">idSpinnerRegionModif</string>
    <string name="titrePopopDeleteDemande">Voulez-vous vraiment modifier cette demande ? </string>
    <string name="idResetidResetCoord">idResetidResetCoord</string>
    <string name="texrRestCoordo"> réinitialisation des points de départs et d\'arriver</string>
    <string name="titrePopopInscription">confirmation de l\'inscription </string>
    <string name="textePopopInscription">Voulez-vous vraiment vpus inscrire ? </string>
    <string name="idCalendrier">idCalendrier </string>
    <string name="idRow_depart_nb_place">idRow </string>
    <string name="action_settings">setting </string>
    <string name="idInscMenu">InscripMenu </string>
    <string name="inscription_menu_accept">Accept</string>
    <string name="inscription_menu_text">Accepter</string>
    <string name="title_activity_chose">ChoseActivity</string>
    <string name="idAjoutDepart">idAjoutDepart</string>
    <string name="idVoirCarte">idVoirCarte</string>
    <string name="idDeconnetion">ChoseActivity</string>
    <string name="TextAjoutDepart">Ajout de Parcour</string>
    <string name="TextVoirCarte">Voir la carte</string>
    <string name="TextDeconnetion">Déconnexion</string>
    <string name="idAjoutTrajetM">idAjoutTrajetM</string>
    <string name="title_activity_passager">Passager</string>
    <string name="title_activity_conducteur">Conducteur</string>
    <string name="title_activity_map_activity">Map</string>
    <string name="title_activity_ajout_trajet">ajouter un Trajet</string>
    <string name="idModifDepart">idModifDepart</string>
    <string name="idDeleteDepart">idDeleteDeparts</string>
    <string name="TextModifDepart">modification</string>
    <string name="texteDeleteDepart">Supprimer</string>
    <string name="idDeleteDemande">idModifDepart</string>
    <string name="lblNomUtil">Guillaume Simard</string>
    <string name="lblParcoursEmprunte">Liste des parcours emprunté :</string>
    <string name="historique_menu_text">Rechercher</string>
    <string name="title_historiqueActivity">Historique du passagé.</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key"> </string>
    <string name="title_activity_modif_pracour">Modification d\'un parcour</string>
    <string name="textKm">nom de kilomètre de ce trajet est de :</string>
    <string name="titrePopoKilo">Distance du parcours</string>
    <string name="titreErreurConnection">Connexion réseau manquante</string>
    <string name="btextErreurConnexion">Aucune connexion internet. Une connexion est nécéssaire afin de se connecter.</string>
    <string name="statusBarNotif">demande de Parcours</string>
    <string name="titleNotif">demande de parcours</string>
    <string name="msg_alarm_receiver">message reçus</string>
    <string name="title_activity_aide_connexion">AideConnexionActivity</string>
    <string name="TrajetAjoutAide">Aide ajout d\'un trajet</string>
    <string name="AideAjoutTrajet">Voici la page d\'ajout d\'un trajet. Vous pouvez sélectionner un trajet sur la carte en cliquant au point de départ, ensuite au point d\'arrivé. Entrez le reste des informations demandées puis confirmez l\'ajout en passant par votre menu.</string>
    <string name="AideConnexion">Aide connexion</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="AideConnexionDetails">Si vous avez un compte, entrez les informations et appuyez sur Connexion, sinon vous pouvez vous inscrire en appuyant sur Inscription</string>
    <string name="title_activity_inscription_aide">Insrciption</string>
    <string name="AideInscriptionMenu">Aide Inscription</string>
    <string name="AideAjoutTrajetMenu">Aide ajout</string>
    <string name="AideConducteurMenu">Aide Conducteur</string>
    <string name="title_activity_description_parcours_activity_aide">
        DescriptionParcoursActivityAide
    </string>
    <string name="AideHistoriqueMenu">Aide Historique</string>
    <string name="AideModifParcoursMenu">Aide Modification</string>
    <string name="AideDescriptionParcourMenu">Aide Description Parcour</string>
    <string name="AideRechercheMenu">Aide Recherche</string>
    <string name="text_Modif_Parcour">Modiification du parcours</string>
    <string name="TitreErreur">Erreur lors de l\'inscription</string>
    <string name="TextErreurConnexion">Tous les champs doivent être complétés afin de vous inscrire</string>
    <string name="AideResultat_Title">Aide resultats recherche</string>
    <string name="AideResultat">Aide sur le résultat de la recherche.</string>
    <string name="AideResultatRecherche">Vous trouverez ici, la liste des parcours correspondant à votre recherche. Afin de visualiser les détails d\'un parcours, vous devez apuyer sur un parcours de la liste.</string>
</resources>