<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dinfogarneau.cours03e.ecotrajet.ajout_trajet">

    <item
        android:id="@+id/idAjoutTrajetM"
        android:title="@string/inscription_menu_accept"
        android:icon="@mipmap/ic_action_accept"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/idDeconnetion"
        android:title="@string/TextDeconnetion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/aide_AjoutTrajet" android:title="@string/AideAjoutTrajetMenu"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>
