
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.dinfogarneau.cours03e.ecotrajet.ajout_trajet">

        <TextView
            android:id="@+id/idTextEnteteModif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>

        <fragment  xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            tools:context=".ajout_trajet"
            tools:layout="@layout/activity_ajout_trajet" />

    <Button
        android:id="@+id/idResetidResetCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texrRestCoordo"
        android:onClick="OnClickDeleteMarker"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/textNomParcours"/>

        <EditText
            android:layout_marginBottom="30dp"
            android:layout_marginRight="120dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ellipsize="start"
            android:id="@+id/idNomParcoursModif"
            android:inputType="text"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/TextDateDepart"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/TextNbPersonne"/>
            <EditText
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idNbPlaceModif"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/TextHeureDepart"/>
            <EditText
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idHeureModif"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/textCout"/>

            <EditText
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idCoutPersonneModif"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/textSpinnerRegion"/>

            <Spinner
                android:id="@+id/idSpinnerRegionModif"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:hint="@string/hintPswConfirmeInscriptionText"
                android:inputType="textPassword"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
